--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -23,7 +23,7 @@
 {% bootstrap_javascript %}
 
 h3 {% trans "Selling cards" %}
-div(ng-controller="sellController")
+div.ng-cloak(ng-controller="sellController")
 
   div
     alert(
