--- a/templates/search/history.jade
+++ b/templates/search/history.jade
@@ -29,7 +29,7 @@ div(ng-controller="historyController")
     div(
       ng-repeat="hist in history"
     )
-      div
+      div.ng-cloak
         a(href="{% verbatim %} {{ hist.item.details_url }} {% endverbatim %}") {% trans "Sell of the" %} {% verbatim %} {{hist.item.date }}: {{hist.item.cards.length}} {% endverbatim %} {% trans "cards" %}
         div {% trans "total" %}: {% verbatim %} {{hist.item.total_price}} {% endverbatim %}
         div(ng-repeat="card in hist.item.cards")
