Allow many parallel searches
missing tests... use betamax ?

--- a/templates/search/card_move.jade
+++ b/templates/search/card_move.jade
@@ -33,6 +33,8 @@ form(method='post', action="{% url 'card_move' pk %}")
   //- h4 Buy ?
   //- {{ BuyForm.as_p }}
 
+  input(type='hidden', value="{{ q }}", name="q")
+  input(type='hidden', value="{{ ean }}", name="ean")
   input.btn.btn-primary(type='submit', value='{% trans "Validate" %}')
 
 {% endblock content %}
