models - Deposit State ++

--- a/templates/search/alerts.jade
+++ b/templates/search/alerts.jade
@@ -27,9 +27,9 @@
 h3 {% trans "Alerts" %}
 div(ng-controller="alertsController")
   div.ng-cloak.list-group(ng-repeat="alert in alerts")
-    div.list-group-item(ng-class="{% verbatim %} {'list-group-item-success': true, 'list-group-item-danger': {{ alert.card.ambigous_sell }} } {% endverbatim %}") {% trans "Alert of the" %}  {% verbatim %} {{ alert.date_creation }} {% endverbatim %}
+    div.list-group-item(ng-class="{% verbatim %} {'list-group-item-success': true, 'list-group-item-danger': {{ alert.card.ambiguous_sell }} } {% endverbatim %}") {% trans "Alert of the" %}  {% verbatim %} {{ alert.date_creation }} {% endverbatim %}
         div {% trans "about the card" %} "{% verbatim %} {{ alert.card.title}} {% endverbatim %}"
-        div {% trans "conflict" %} ? {% verbatim %} {{ alert.card.ambigous_sell }} {% endverbatim %}
+        div {% trans "conflict" %} ? {% verbatim %} {{ alert.card.ambiguous_sell }} {% endverbatim %}
         div {% trans "related deposits" %}: {% verbatim %} {{ alert.deposits_repr }} {% endverbatim %}
 
 {% endblock %}
