--- a/templates/search/inventory_new.jade
+++ b/templates/search/inventory_new.jade
@@ -51,7 +51,7 @@ div(ng-controller="inventoryNewController")
       a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
       span {% verbatim %} {{card.authors}} {% endverbatim %}
       i.glyphicon.glyphicon-warning-sign(
-        ng-show="{% verbatim %} cards_selected[$index].ambigous_sell {% endverbatim %}"
+        ng-show="{% verbatim %} cards_selected[$index].ambiguous_sell {% endverbatim %}"
         title="{% trans 'There is a conflict with deposits.' %}")
       i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)", style="float: right;")
       i.glyphicon.glyphicon-exclamation-s
