--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -34,7 +34,7 @@ form(action='{% url "card_collection" %}', method="post")
 unless book_list
   p.bg-info {% trans "No results" %}
 
-span: span {{ nb_results }} {% trans "results" %}
+span: span {{ nb_results }} {% trans "results" %} / {{ total_results }}
       a(href="{% url 'card_collection' %}?format=text")
         input.btn.btn-primary(type="submit", value="{% trans 'voir en texte' %}", style="float: right;")
 
