UI - display a Deposit State (basic)

--- a/templates/search/deposits.jade
+++ b/templates/search/deposits.jade
@@ -40,7 +40,7 @@ table.table.table-striped.table-hover
       td
         a(href="{{ dep.get_absolute_url }}") {{ dep.name }}
       td {{ dep.distributor.name }}
-      td {{ dep.last_checkout }}
+      td {{ dep.last_checkout_date }}
       td {{ dep.nb_alerts }}
       //- td {{ dep. }}
 
