--- a/templates/search/deposits_create.jade
+++ b/templates/search/deposits_create.jade
@@ -33,12 +33,19 @@ div(ng-controller="DepositCreateController")
       b
         div {% trans "Name of the deposit" %}
       input.form-control(type="text", ng-model="deposit_name", required)
+
       b
         div {% trans "Type" %}
       select.form-control(ng-model="deposit_type", ng-options="elt.name group by elt.target for elt in deposit_types", required)
+
+      div(ng-show="{% verbatim %} isDistributorDeposit(deposit_type.name) {% endverbatim %}")
+        b Destination place
+        select.form-control(ng-model="dest_place", ng-options="elt.name for elt in places")
+
       b
         div {% trans "Inital quantity" %}
       input.form-control(type="number", ng-model="initial_nb_copies")
+
       b
         div {% trans "Minimum wanted quantity" %}
       input.form-control(type="number", ng-model="minimal_nb_copies")
