--- a/templates/search/deposits_create.jade
+++ b/templates/search/deposits_create.jade
@@ -45,7 +45,7 @@ div(ng-controller="DepositCreateController")
         input.form-control(
               type='text'
               datepicker-popup='{{format}}'
-              ng-model='date'
+              ng-model='due_date'
               is-open='opened'
               datepicker-options='dateOptions'
               ng-required='true'
