--- a/templates/search/deposits.jade
+++ b/templates/search/deposits.jade
@@ -24,25 +24,53 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
-if deposits
-  h3 {% trans "Dépôts existants" %}:
-else
-  h3 {% trans "Aucun dépôt existant" %}
-table.table.table-striped.table-hover
-  tr
-      td {% trans "Nom du dépot" %}
-      td {% trans "Diffuseur" %}
-      td {% trans "Dernier état de dépôt" %}
-      td {% trans "Alertes" %}
-      td {% trans "Exemplaires restants" %}
-  for dep in deposits
+if  depo_pubtype
+  h3 Dépots externes
+    table.table.table-striped.table-hover
     tr
-      td
-        a(href="{{ dep.get_absolute_url }}") {{ dep.name }}
-      td {{ dep.distributor.name }}
-      td {{ dep.last_checkout_date }}
-      td {{ dep.nb_alerts }}
-      //- td {{ dep. }}
+        td {% trans "Nom du dépot" %}
+        td {% trans "Diffuseur" %}
+        td {% trans "Dernier état de dépôt" %}
+        td {% trans "Alertes" %}
+        td Initial qty
+        td Total price
+
+    for dep in depo_pubtype
+      tr
+        td
+            a(href="{{ dep.get_absolute_url }}") {{ dep.name }}
+        td {{ dep.distributor.name }}
+        td {{ dep.last_checkout_date }}
+        td {{ dep.nb_alerts }}
+        td {{ dep.initial_nb_copies }}
+        td {{ dep.total_init_price }}
+
+else
+  h4 {% trans "Aucun dépôt de type éditeur" %}
+
+if depo_fix
+  h3 Dépots de la librairie:
+  table.table.table-striped.table-hover
+    tr
+        td {% trans "Nom du dépot" %}
+        td {% trans "Diffuseur" %}
+        td {% trans "Dernier état de dépôt" %}
+        td {% trans "Alertes" %}
+        td {% trans "Initial qty" %}
+        td {% trans "Total price" %}
+
+    for dep in depo_fix
+      tr
+        td
+            a(href="{{ dep.get_absolute_url }}") {{ dep.name }}
+        td {{ dep.distributor.name }}
+        td {{ dep.last_checkout_date }}
+        td {{ dep.nb_alerts }}
+        td {{ dep.init_qty }}
+        td {{ dep.total_init_price }}
+
+else
+  h4 {% trans "Aucun dépôt de librairie" %}
 
 a.btn.btn-primary(href="{% url 'deposits_new' %}") {% trans "Nouveau dépôt" %}
 {% endblock content %}
