--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -34,6 +34,10 @@
       h4 {% trans "in stock" %}: {{ object.quantity }}
       div isbn: {{ object.isbn }}
       a(target="_blank", href="{{ object.details_url }}") {% trans "source" %}: {{ object.data_source }}
+
+      div.panel.panel-default {% trans "Comment" %}
+       div.panel-heading
+        div.panel-content {{ object.comment }}
   .col-lg-9
     h3 {{ object.title }}
     h4 {{ object.display_authors }}
@@ -61,8 +65,12 @@
 
     div {% trans "Alerts" %}: {{ object.alert_set.count }}
 
-.row
-  .col-lg-9
-    div {{ object.comment }}
+    div {% trans "Last entry" %}: not implemented
+
+    div {% trans "Last sells" %}
+      ul.list-group
+        for sell in sells
+          a(href="{{ sell.get_absolute_url }}")
+            li.list-group-item {{ sell.created }}
 
 {% endblock content %}
