Entry history model

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -24,7 +24,9 @@
 
 
 .row
-  a(href="/admin/search/card/{{object.pk}}", title="{% trans 'Edit the card' %}") {% trans "Edit" %}
+  .col-lg-3
+  .col-lg-9
+    a(href="/admin/search/card/{{object.pk}}", title="{% trans 'Edit the card' %}") {% trans "Edit" %}
 .row
   .col-lg-3
     .row
